<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="hello">Hello World, StopWatch!</string>
    <string name="chronometer_initial_format"><xliff:g id="initial-format">%s</xliff:g></string>
    <string name="start_btn">START</string>
    <string name="stop_btn">STOP</string>
    <string name="reset_btn">RESET</string>
    <string name="lap_btn">LAP</string>


    <string name="city_header">City</string>
    <string name="temp_header">Temparature</string>
    <string name="humidity_header">Humidity</string>

    <string name="app_name">Swiss Army Knife Utility</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="indian_time">India Time</string>
    <string name="usa_time">US Time</string>
    <string name="sa_time">SA Time</string>
     <string name="track">Track</string>
    <string name="hint">Weight</string>
    <string name="loss_weight">Δweight</string>
    <string name="weight">weight</string>
    <string name="time">Time</string>
    <string name="serial_no">Sno.</string>

    <string-array name="menu_items_list">
        <item>Item1</item>
        <item>Item2</item>
        <item>Item3</item>
        <item>Item4</item>
        <item>Item5</item>
    </string-array>
<string name="btnOne">1</string>
    <string name="btnTwo">2</string>
    <string name="btnThree">3</string>
    <string name="btnFour">4</string>
    <string name="btnFive">5</string>
    <string name="btnSix">6</string>
    <string name="btnSeven">7</string>
    <string name="btnEight">8</string>
    <string name="btnNine">9</string>
    <string name="btnZero">0</string>
    <string name="btnDot">.</string>
    <string name="btnDivide">/</string>
    <string name="btnMultiply">X</string>
    <string name="btnSubtract">-</string>
    <string name="btnAdd">+</string>
    <string name="btnEquals">=</string>
    <string name="btnClear">C</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="network_unavailable_msg">Please check your internet connection.</string>
    <string name="not_found_word_meaning">Not able to find meaning of entered word.</string>
    <string name="empty_word_msg">Please enter the word.</string>
    <string name="wordsmyth_dictionary">Wordsmyth Dictionary</string>
</resources>
