<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".MyActivity">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/header"
        android:id="@+id/include" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/ll_password_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_popup"
            android:padding="10dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/weight_tracker_et_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                 android:inputType="number"
                android:layout_gravity="center_vertical"
                android:hint="@string/hint" />

            <Button
                android:id="@+id/weight_tracker_btn_trade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/track" />

        </LinearLayout>


        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"

            android:background="#fff"
             />

        <LinearLayout
            android:id="@+id/chart_container1"
            android:layout_width="fill_parent"
             android:layout_height="170dp"
            android:background="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"

            android:background="#fff"
             />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:text="@string/serial_no"
                android:textColor="#000"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weight"
                android:textSize="16sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/loss_weight"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="#000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:text="@string/time"
                android:textSize="16sp"
                android:textColor="#000"
                android:gravity="center"
                android:textStyle="bold" />

        </LinearLayout>

        <ListView
            android:id="@+id/weight_tracker_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="#00000000"
            android:divider="@null" />


    </LinearLayout>


</LinearLayout>