<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_fragment_light_gray">

    <include android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/header"
         />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentStart="true"
        android:layout_marginTop="55dp"
        >
        <Button
            android:id="@+id/btn_us_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="USA Time" />
        <Button
            android:id="@+id/btn_india_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="India Time"
            android:layout_marginLeft="20dp" />

        <Button
            android:id="@+id/btn_sa_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SA Time"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/indian_time"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:id="@+id/txt_time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="20sp"
            android:text="@string/usa_time"
             android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:id="@+id/txt_time_us"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/sa_time"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:id="@+id/txt_time_sa"
            android:textSize="20sp"
            />

        </LinearLayout>


</RelativeLayout>